# webpilot-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_workflow.yaml  extract_demo.yaml
tests/: test_extractor.py  test_utils.py
webpilot/: __init__.py  browser.py  cli.py  extractor.py  formatter.py  utils.py  workflow.py
